[package]
name = "dump-nimbus-db"
version = "0.1.0"
edition = "2024"
publish = false
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
prettytable-rs = "0.10.0"
rkv = "0.20.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
